<resources>
    <string name="app_name">About Me</string>
    <string name="name">Jakub Jóźwiak</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio_text">Hi, my name is Kuba. \n\nI love fish. \n\n
    The kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean. \n
    Fun fact is that I have several aquariums and also a river. \n\nI like eating fish, too. Raw fish.
    Grilled fish. Smoked fish. Poached fish - not so much. \nAnd sometimes I even go fishing. \n
    And even less sometimes, I actually catch something. \n\nOnce, when I was camping in Canada, and very hungry,
    I even caught a large salmon with my hands. \n\nI\'ll be happy to teach you how to make your own aquarium. \n
    You should ask someone else about fishing, though.\n</string>
    <string name="text_mail">jakub.jozwiak2000@wp.pl</string>
    <string name="nickname">What is your nickname</string>
    <string name="done_button">Done</string>
</resources>