<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/layout_margin"
    android:layout_marginEnd="@dimen/layout_margin"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/Name_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/nickname_edit"
        style="@style/Name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/nickname_text"
        style="@style/Name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        android:text=""
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/small_padding"/>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/done_button" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        android:scrollbarSize="4dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/layout_padding"
                android:paddingEnd="@dimen/layout_padding"
                android:text="@string/bio_text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"

                    android:contentDescription="Mail Image"
                    android:scrollbarSize="2dp"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <TextView
                    android:id="@+id/text_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/layout_padding"
                    android:paddingRight="@dimen/layout_padding"
                    android:text="@string/text_mail"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>